--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,8 @@ body{
 
 .Top_detailBox p{
     margin-top: 0;
-    margin-bottom: 5px;
+    margin-bottom: 0;
+    /* margin-bottom: 5px; */
 }
 
 .Top_day{
